routes/example_route_output.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2019-09-11T16:44:17Z"
  labels:
    app: oauth-openshift
  name: oauth-openshift
  namespace: openshift-authentication
  resourceVersion: "11557"
  selfLink: /apis/route.openshift.io/v1/namespaces/openshift-authentication/routes/oauth-openshift
  uid: 65011a3e-d4b3-11e9-b2c7-0a580a820018
spec:
  host: oauth-openshift.apps.qe-pruan-09-11-114314.qe.devcluster.openshift.com
  port:
    targetPort: 6443
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth-openshift
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2019-09-11T16:46:59Z"
      status: "True"
      type: Admitted
    host: oauth-openshift.apps.qe-pruan-09-11-114314.qe.devcluster.openshift.com
    routerCanonicalHostname: apps.qe-pruan-09-11-114314.qe.devcluster.openshift.com
    routerName: default
    wildcardPolicy: None
